[gd_scene load_steps=9 format=3 uid="uid://cq0qn1emakh3a"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_me7o1"]
[ext_resource type="Texture2D" uid="uid://d13ou0xvvosbm" path="res://Assets/Sprites/title.png" id="2_a52b3"]
[ext_resource type="Texture2D" uid="uid://dqb0iv00m16tu" path="res://Assets/Sprites/label_won_message.png" id="3_5uotd"]
[ext_resource type="Texture2D" uid="uid://dxf1xeugk644" path="res://Assets/Sprites/label_lost_message.png" id="4_40t88"]
[ext_resource type="Texture2D" uid="uid://c64we8suxg8dh" path="res://Assets/Sprites/label_continue.png" id="5_hp7l8"]
[ext_resource type="Texture2D" uid="uid://cr07xfpy8ffjq" path="res://Assets/Sprites/tryagain.png" id="6_40x68"]
[ext_resource type="Texture2D" uid="uid://cv53ym4nnp6rw" path="res://Assets/Sprites/label_main_menu.png" id="7_7ncag"]
[ext_resource type="AudioStream" uid="uid://cyok4sasvyklx" path="res://Assets/Sound/menu_music.mp3" id="8_7216f"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_me7o1")

[node name="MainMenu" type="MarginContainer" parent="."]
offset_left = -10.5
offset_top = 30.0
offset_right = 586.5
offset_bottom = 994.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 30

[node name="Logo" type="TextureRect" parent="MainMenu/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_a52b3")

[node name="MenuOptions" type="VBoxContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="GameWonMessage" type="TextureRect" parent="MainMenu/VBoxContainer/MenuOptions"]
layout_mode = 2
texture = ExtResource("3_5uotd")
stretch_mode = 3

[node name="GameLostMessage" type="TextureRect" parent="MainMenu/VBoxContainer/MenuOptions"]
layout_mode = 2
texture = ExtResource("4_40t88")
stretch_mode = 3

[node name="Continue" type="TextureButton" parent="MainMenu/VBoxContainer/MenuOptions"]
layout_mode = 2
texture_normal = ExtResource("5_hp7l8")
stretch_mode = 5

[node name="TryAgain" type="TextureButton" parent="MainMenu/VBoxContainer/MenuOptions"]
layout_mode = 2
texture_normal = ExtResource("6_40x68")
stretch_mode = 5

[node name="Back" type="TextureButton" parent="MainMenu/VBoxContainer/MenuOptions"]
layout_mode = 2
texture_normal = ExtResource("7_7ncag")
stretch_mode = 5

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_7216f")
autoplay = true

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/Back" to="." method="_on_back_pressed"]
